--- a/src/app/accounts/acctrans/acctrans-edit/acctrans-edit.component.html
+++ b/src/app/accounts/acctrans/acctrans-edit/acctrans-edit.component.html
@@ -21,14 +21,12 @@
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Date</label>
-              <div class="col-sm-8">
+              <div class="col-sm-3">
                 <app-date formControlName="jvh_date" [format]="gs.globalConstants.global_date_format"
                   [placeholder]="gs.globalConstants.global_date_format"></app-date>
               </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Fin-year</label>
-              <div class="col-sm-8">
+              <label class="col-sm-2 form-label form-lable-sm">Fin-year</label>
+              <div class="col-sm-3">
                 <auto-complete formControlName="jvh_year" name="jvh_year" id="jvh_year" (CallBack)="callBack($event)"
                   table="year" [company_id]="getCompanyId()" [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'year_code'},{'caption':'NAME','value':'year_name'}]"></auto-complete>
@@ -159,11 +157,15 @@
       </div>
     </form>
 
-    <div class="page-footer line-bottom">
-      <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()"
-        [disabled]="mform.invalid">Save</button>
+     <div class="page-footer line-bottom">
+      <button  class="btn btn-sm btn-success" (click)="save()"
+        [disabled]="mform.invalid || !bSave" type="button">Save</button>
+    </div>
+    <div class="ms-2">
+      <h6 class="text-danger me-5">{{mform.get('rec_error')?.value}}</h6>
     </div>
   </div>
+</div>
 
   <div *ngIf="showModel">
     <pre>
