--- a/src/app/accounts/invoicem/invoicem-edit/invoicem-edit.component.html
+++ b/src/app/accounts/invoicem/invoicem-edit/invoicem-edit.component.html
@@ -29,14 +29,12 @@
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Date</label>
-              <div class="col-sm-8">
+              <div class="col-sm-3">
                 <app-date formControlName="inv_date" [format]="gs.globalConstants.global_date_format"
                   [placeholder]="gs.globalConstants.global_date_format"></app-date>
               </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Fin-year</label>
-              <div class="col-sm-8">
+              <label class="col-sm-2 form-label form-lable-sm">Fin-year</label>
+              <div class="col-sm-3">
                 <auto-complete formControlName="inv_year" name="inv_year" id="inv_year" (CallBack)="callBack($event)"
                   table="year" [company_id]="getCompanyId()" [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'year_code'},{'caption':'NAME','value':'year_name'}]"></auto-complete>
@@ -314,11 +312,14 @@
     </form>
 
     <div class="page-footer line-bottom">
-      <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()"
-        [disabled]="mform.invalid">Save</button>
-      <button *ngIf="bDelete && mode== 'edit'" class="btn btn-sm"
-        [ngClass]="(mform.get('rec_deleted')?.value === 'Y') ? 'btn-danger' : 'btn-success'" (click)="restoreInvoice()">{{
+      <button  class="btn btn-sm btn-success" (click)="save()"
+        [disabled]="mform.invalid || !bSave" type="button">Save</button>
+      <button *ngIf="mode== 'edit'" class="btn btn-sm"
+        [ngClass]="(mform.get('rec_deleted')?.value === 'Y') ? 'btn-danger' : 'btn-success'" [disabled]="!bSave && bDelete"  (click)="restoreInvoice()">{{
         mform.get('rec_deleted')?.value === 'Y' ? 'Restore' : 'Delete'}}</button>
+    </div>
+    <div class="ms-2">
+      <h6 class="text-danger me-5">{{mform.get('rec_error')?.value}}</h6>
     </div>
   </div>
   <div class="col-sm-2" *ngIf="mode=='edit'">
